Sigil v0.1.7 <ADD DATE>
    - Sigil now loads HTML metadata when importing if metadata conforms to Dublin Core;
    code contribution from Kevin Hendricks (issue #160)
    - fixed an issue with loading TXT files with unescaped character entity references (issue #202)
    - fixed an issue with headings not being centered after View switches (issue #200)
    - fixed an issue with files with uppercase extensions being loaded incorrectly
    - fixed an issue with loading TXT files with Mac-style (CR) line endings (issue #170)
    - fixed an issue with loading UTF-16 encoded files that used Windows style (CRLF) line endings
    - Sigil should now detect UTF-8 encoded HTML files even when they don't specify that they
    are UTF-8 encoded, and HTML files that use the XML "encoding" attribute (for any encoding)
    - fixed a rare issue with false spaces being inserted into words during import (issue #139)
    - the Views can now be scrolled by one line up/down by pressing CTRL+Up/Down (issue #72)
    - the About dialog now links to the online version of the GPLv3
    - made viewport switching more robust; the rare crashes should now become much rarer

Sigil v0.1.6 2009.12.06.
    - added a "Report An Issue" menu entry to the Help menu; opens a web browser and goes to the
    "ReportingIssues" wiki page on Sigil's website
    - fixed an issue with empty NavMap generation in the NCX if the file had no headings;
    the epub specification forbids empty NavMaps (issue #174)
    - fixed an issue with the document not being marked as modified in the GUI if the user only
    changed the document's metadata (issue #189)
    - fixed a rare bug with searching for a string that is at the very end of a document (issue #181)
    - new "Remove Formatting" WYSIWYG action (issue #56)
    - Sigil now preserves ALL HTML entity references (it used to convert most to Unicode equivalents);
    this change was necessary since soft hyphens were becoming "invisible" (issue #186)